fix icon spacing

--- a/style2.css
+++ b/style2.css
@@ -153,7 +153,7 @@ body{
 
 .icon{
   width: 32%;
-  display: none
+  opacity: 0
 }
 
 #third-heading{
@@ -172,9 +172,9 @@ body{
    font-family: "Anton";
 }
 
-.icons {
+/* .icons {
   height: 150px
-}
+} */
 
 
 /* .border-container{
